--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -11,6 +11,16 @@ function MM_goToURL() { //v3.0
 }
 //-->
 </script>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-88835329-1', 'auto');
+  ga('send', 'pageview');
+
+    </script>
 </head>
 <body onload="MM_goToURL('parent','en/index.aspx');return document.MM_returnValue">
 </body>
